# Anfima

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: build.yml
src/: anfima-hid.cpp  anfima-hid.h  anfima-serial.cpp  anfima-serial.h  anfima-wasm.cpp  anfima-webserver.cpp  anfima-webserver.h  anfima-x11icon.cpp  anfima.cpp  tests.cpp  webserver.cpp  webserver.h  webserver.hpp
src/html/: empty.html  index.html
src/html/js/: anfima.js  anfima.ts  backend-data.ts  backend-files.ts  backend.js  backend.ts  cloud-darkglass.ts  cloud-modaudio.ts  cloud.ts  constants.ts  dpf.ts  file-manager.js  html.ts  logger.ts  reset-user-image.ts  utils.ts  wasm.ts
src/html/js/anfima-types/: backend.d.ts  cloud-darkglass.d.ts  cloud-modaudio.d.ts  cloud.d.ts  globals.d.ts  html.d.ts  logger.d.ts  wasm.d.ts
src/html/js/backends/: dpf.ts  dummy.js  dummy.ts  simulator.ts  web-bluetooth.ts  web-hid.ts  web-midi.ts  web-serial.ts
src/html/js/pages/: file-manager.ts  info.ts  plugin-manager.ts  preset-manager.ts  tools.ts
src/html/js/resources/: reset-user-settings.ts
src/html/js/types/: backend-data.d.ts  backend-files.d.ts  backend.ts  backends.ts  constants.d.ts  constants.ts  dpf.ts  html.ts  logger.ts  pages.ts  resources.ts  uikit.ts  utils.ts  web.d.ts  web.ts
utils/: build-wasm.sh  res2c.cmake
utils/macOS/: Info.plist  anfima.icns
utils/udev/: 50-darkglass-anagram.rules  install.sh
utils/win32/: anfima.rc
